# shelter-manager

./: CMakeLists.txt  README.md
data/: dogs.txt
src/: AdminService.cpp  AdminService.h  Dog.cpp  Dog.h  IRepository.h  MemoryRepository.cpp  MemoryRepository.h  Tests.cpp  Tests.h  TextFileRepository.cpp  TextFileRepository.h  UI.cpp  UI.h  UserService.cpp  UserService.h  main.cpp
